страница избранное показывает избранные коворкинги, исправил метод getCoworkingById, исправил верстку, убрал панель пагинации при количестве коворкингов меньше 4

--- a/src/app/components/favourites-page/favourites-page.component.css
+++ b/src/app/components/favourites-page/favourites-page.component.css
@@ -1,5 +1,23 @@
 @media screen and (max-width: 5000px) {
 
+  .pagination /deep/ .ngx-pagination .current {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
+  .pagination /deep/ .ngx-pagination a:hover,
+  .ngx-pagination button:hover {
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 10px;
+  }
+
+  /* .pagination {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    margin-left: 100px;
+  } */
+
   .wrapper {
     min-height: 100%;
   }
