--- a/src/app/components/favourites-page/favourites-page.component.html
+++ b/src/app/components/favourites-page/favourites-page.component.html
@@ -20,10 +20,17 @@
     </div>
     <div class="top-information">
       <p class="top-information__header">Избранное</p>
-      <!-- <app-coworkings-list *ngFor="let coworking of favourites_coworkings" [coworking]="coworking"></app-coworkings-list> -->
-      <p class="wait-information">Здесь ведется работа над новым и захватывающим контентом. Мы с нетерпением ждем, чтобы
-        поделиться им с вами!
-        Оставайтесь на связи и скоро вы увидите нашу новую, впечатляющую страницу.</p>
+      <app-coworkings-list
+        *ngFor="let coworking of favoriteCoworkings | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage } let i = index"
+        [coworking]="coworking"></app-coworkings-list>
+
+      <div class="pagination" *ngIf="favoriteCoworkings.length > 4">
+        <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+      </div>
+
+      <p class="wait-information" *ngIf="favoriteCoworkings.length === 0">
+        У вас пока нет избранных коворкингов. Вы можете добавить коворкинги в избранное на главной странице!
+      </p>
 
     </div>
   </div>
